# vision-toolkit

./: .gitignore  Containerfile  README.md  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
.github/patched_toolkit/: actions-artifact-6.1.0.tgz
.github/workflows/: build-sdist-wheels-and-upload-to-pypi.yml  build_sdist_wheels_and_upload_to_pypi.yml  docs.yml  run-test.yml  run-test.yml~  v01dxyz-sync-cron.yml~
docs/: api_reference.md  index.md  testing.md
docs/notebooks_original/: analysis.md  nbconvert_zensical.tpl  notebook_startup.py  update_notebooks.sh
docs/papers/: part1.md  part2.md  part3.md
documentation/Documentaion_VT/: divers.py  main.py  main_AoI_identification.py  main_fixation.py  main_learning.py  main_pursuit.py  main_pursuit_task.py  main_scanpath_saliency.py  main_scanpath_similarity_CRQA.py  main_scanpath_similarity_character.py  main_scanpath_similarity_distance.py  main_scanpath_similarity_saliency.py  main_scanpath_similarity_specific.py  main_segmentation.py
documentation/Documentaion_VT/old/: main_article_4.py
documentation/documentation_RIM/: main.py
documentation/documentation_RIM/mappedGazeOutput/: mappedGaze_gaze.csv
src/reference_image_mapper/: run.py
src/vision_toolkit/: __init__.py
src/vision_toolkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/vision_toolkit/aoi/: aoi_base.py
src/vision_toolkit/aoi/common_subsequence/: constrained_dtw_barycenter_averaging.py  trend_analysis.py
src/vision_toolkit/aoi/identification_algorithms/: I_AP.py  I_DT.py  I_KM.py  predefined.py
src/vision_toolkit/aoi/markov_based/: fisher_kernel.py  markov_based.py  transition_entropy.py
src/vision_toolkit/aoi/pattern_mining/: n_gram.py
src/vision_toolkit/oculomotor/segmentation_based/: fixation.py  pursuit.py  saccade.py
src/vision_toolkit/segmentation/processing/: ternary_segmentation.py
src/vision_toolkit/segmentation/segmentation_algorithms/: I_2MC.py
src/vision_toolkit/utils/: identification_utils.py  segmentation_utils.py  velocity_distance_factory.py
src/vision_toolkit/visualization/aoi/: basic_representation.py
src/vision_toolkit/visualization/scanpath/: basic_representation.py
src/vision_toolkit2/: __init__.py  config.py  config_compat.py  config_old.py  oculomotor_series.py  serie.py  smoothing.py  velocity_distance_factory.py
src/vision_toolkit2/segmentation/: __init__.py  base_segmentation.py  base_segmentation_results.py  default_config_builder.py  utils.py
src/vision_toolkit2/segmentation/analysis/: base_analysis.py  fixation.py  pursuit.py  pursuit_task.py  saccade.py
src/vision_toolkit2/segmentation/binary/: __init__.py  base_analysis.py  binary_segmentation.py  binary_segmentation_results.py  default_config_builder.py  fixation_analysis.py  saccade_analysis.py
src/vision_toolkit2/segmentation/ternary/: ternary_segmentation_results.py
tests/: compare_analysis.py  coverage_in_container.sh  coverage_markdown_report.py  run.py  run_both_versions.sh  run_in_container.sh
tests/hollywood2/: #run.py#  __init__.py  run.py  run.py~  run_in_container.sh
tests/vision_toolkit_test/: __init__.py
tests/zemblys/: __init__.py
tools/: clean_then_do.sh
vision_toolkit_c/: setup.py
(+42 files in other folders)
