[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "Cython>=0.28.5",
    "oldest-supported-numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "vision_toolkit"
version = "0.1"
description = "Vision Toolkit"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.6"
authors = [
    {name = "Quentin Laborde", email = "quentin.laborde@ens-paris-saclay.fr"},
]
maintainers = [
    {name = "QuentinLaborde-ENS"},
]
dependencies = [
    "bitarray",
    "build",
    "func-timeout",
    "gudhi",
    "hilbertcurve",
    "lempel_ziv_complexity",
    "matplotlib",
    "omegaconf==2.2.*",
    "setuptools",
    "networkx",
    "numpy",
    "imageio",
    "pandas",
    "plotly",
    "scikit-learn",
    "scipy",
    "seaborn",
    "shapely",
    "treelib==1.6.4",
    "tqdm",
    "pytlsd==0.0.2",
]

[project.optional-dependencies]
test = [
    "pytest",
    "sp-tool @ git+https://github.com/v01dxyz/sp_tool",
    "tabulate",
    "coverage",
    "Cython",
]
docs = [
    "jupyter",
    "librosa",
    "matplotlib",
    "mkdocs",
    "mkdocs-macros-plugin",
    "mkdocs-material",
    "mkdocstrings[python]>=0.18",
    "mknotebooks",
    "pymdown-extensions",
    "nltk",
]

[project.urls]
Homepage = "https://github.com/v01dxyz/vision_toolkit"

# uv build needs to have the Cython files included
[tool.setuptools.package-data]
"*" = ["*.pyx", "*.pxd"]

[tool.coverage.run]
plugins = ["Cython.Coverage"]
